yaml/console.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-console
spec:
  finalizers:
    - kubernetes
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-console-user-settings
spec:
  finalizers:
    - kubernetes
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-network-console
spec:
  finalizers:
    - kubernetes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: console
    component: ui
  name: console
  namespace: openshift-console
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: console
      component: ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: console
        component: ui
    spec:
      containers:
        - command:
            - /opt/bridge/bin/bridge
            - --public-dir=/opt/bridge/static
            - --user-auth=disabled
            - --config=/var/console-config/console-config.yaml
            - --k8s-mode-off-cluster-skip-verify-tls=true
          image: quay.io/openshift/origin-console:4.21.0
          imagePullPolicy: Always
          name: console
          ports:
            - containerPort: 9000
              name: http
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /var/console-config
              name: console-config
              readOnly: true
            - mountPath: /etc/pki/ca-trust/extracted/pem/k8s-ca-bundle.pem
              name: trusted-ca-bundle
              subPath: k8s-ca-bundle.pem
              readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            name: console-config
          name: console-config
        - configMap:
            defaultMode: 420
            items:
              - key: ca.crt
                path: k8s-ca-bundle.pem
            name: kube-root-ca.crt
          name: trusted-ca-bundle

---
apiVersion: v1
kind: Service
metadata:
  name: console
  namespace: openshift-console
spec:
  clusterIP: 10.96.120.65
  clusterIPs:
    - 10.96.120.65
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: web
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: console
    component: ui
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/description: >-
      Expose the networking console plugin service on port 9080. This port is
      for internal use, and no other usage is guaranteed.
  labels:
    app.kubernetes.io/component: networking-console-plugin
  name: networking-console-plugin
  namespace: openshift-network-console
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 9080
      protocol: TCP
      targetPort: 9080
  selector:
    app.kubernetes.io/component: networking-console-plugin
    app.kubernetes.io/name: networking-console-plugin
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/description: |
      This deployment deploys the Networking console plugin pod which serves
      the contents of the Networking section in OpenShift Console
  labels:
    app.kubernetes.io/component: networking-console-plugin
    app.kubernetes.io/name: networking-console-plugin
  name: networking-console-plugin
  namespace: openshift-network-console
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: networking-console-plugin
      app.kubernetes.io/name: networking-console-plugin
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/required-scc: restricted-v2
      labels:
        app.kubernetes.io/component: networking-console-plugin
        app.kubernetes.io/name: networking-console-plugin
    spec:
      automountServiceAccountToken: false
      containers:
        - command:
            - /bin/sh
            - '-c'
            - >
              if echo "$POD_IP" | grep -qE '^([0-9]{1,3}\.){3}[0-9]{1,3}$'; then
                LISTEN_ADDRESS_PORT_REPLACED_AT_RUNTIME="9080"
              else
                LISTEN_ADDRESS_PORT_REPLACED_AT_RUNTIME="[::]:9080"
              fi

              sed
              "s/LISTEN_ADDRESS_PORT_REPLACED_AT_RUNTIME/$LISTEN_ADDRESS_PORT_REPLACED_AT_RUNTIME/g"
              /etc/nginx/nginx.conf > /tmp/nginx.conf

              exec nginx -c /tmp/nginx.conf -g 'daemon off;'
          image: >-
            quay.io/okd/scos-content@sha256:8a6a434b6975e50072284893997dc37223ecfdd33d5a4bae79f5b16dfd998159
          imagePullPolicy: IfNotPresent
          name: networking-console-plugin
          ports:
            - containerPort: 9080
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 1m
              memory: 50Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: FallbackToLogsOnError
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-conf
              readOnly: true
              subPath: nginx.conf
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/os: linux
      priorityClassName: system-cluster-critical
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            name: networking-console-plugin
          name: nginx-conf
---
